--- a/src/main/resources/templates/books-list.html
+++ b/src/main/resources/templates/books-list.html
@@ -7,6 +7,9 @@
             <!-- Page Content-->
             <section layout:fragment="body" class="py-5">
                 <div class="container px-5 my-5">
+                    <div th:if="${param.success}" class="alert alert-success">
+                        You are registered successfully!
+                    </div>
                     <div class="text-center mb-5">
                         <h1 class="fw-bolder">Books Near You</h1>
                         <p class="lead fw-normal text-muted mb-0">All books available</p>
@@ -20,7 +23,9 @@
                         <div th:each="book : ${books}" class="col-lg-6 mb-2">
                             <h1 th:text="'BOOK: ' + ${book.title}"></h1>
                             <a class="btn btn-primary" th:href="@{/books/{bookId}(bookId=${book.id})}">VIEW</a>
-                            <a class="btn btn-primary" th:href="@{/books/{bookId}/edit(bookId=${book.id})}">EDIT</a>
+                            <div th:if="${user.id} == ${book.createdBy.id}">
+                                <a class="btn btn-primary" th:href="@{/books/{bookId}/edit(bookId=${book.id})}">EDIT</a>
+                            </div>
                         </div>
                     </div>
                 </div>
