--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_FILE">RunGroop</title>
@@ -19,16 +20,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link" th:href="@{/}">Home</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/books}">Find Book</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/authors}">Find Authors</a></li>
-                <li class="nav-item"><a class="nav-link" href="pricing.html">Category</a></li>
-                <li class="nav-item dropdown">
+                <li sec:authorize="isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/books}">Find Book</a></li>
+                <li sec:authorize="isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/authors}">Find Authors</a></li>
+                <li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/login}">Login</a></li>
+                <li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/register}">Register</a></li>
+                <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">Welcome</a>
+                       data-bs-toggle="dropdown" aria-expanded="false">Actions</a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
                         <li><a class="dropdown-item" th:href="@{/books/form}">Add Book</a></li>
-                        <li><a class="dropdown-item" href="blog-home.html">Register</a></li>
-                        <li><a class="dropdown-item" href="blog-post.html">Login</a></li>
+                        <li><a class="dropdown-item" th:href="@{/logout}">Logout</a></li>
                     </ul>
                 </li>
             </ul>
