--- a/src/main/resources/templates/authors-list.html
+++ b/src/main/resources/templates/authors-list.html
@@ -12,11 +12,25 @@
                 <p class="lead fw-normal text-muted mb-0">All Authors</p>
             </div>
             <div class="row gx-5">
-                <div th:each="author : ${authors}" class="col-lg-6 mb-2">
-                    <h1 th:text="'AUTHOR: ' + ${author.name}"></h1>
-                    <a class="btn btn-primary" th:href="@{/authors/{authorId}(authorId=${author.id})}">View</a>
-                    <div th:if="${user.id} == ${author.book.createdBy.id}">
-                        <a class="btn btn-primary" th:href="@{/authors/{authorId}/edit(authorId=${author.id})}">Edit</a>
+                <div>
+                    <form th:action="@{/authors/search}" class="form-inline my-2 my-lg-0 mb-3">
+                        <input name="query" class="form-control mr-sm-2 mb-5" type="search" placeholder="Search Author" aria-label="Search">
+                    </form>
+                </div>
+                <div th:each="author : ${authors}" class="col-lg-2 col-md-4 col-sm-6 mb-2">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-auto">
+                                <img th:src="${author.photoUrl}" class="img-fluid"/>
+                                <h2 th:text="${author.name}"class="mt-3" style="word-wrap:break-word; width:100%; text-align:center;"></h2>
+                                <div class="d-flex gap-2" role="group">
+                                    <a class="btn btn-primary" th:href="@{/authors/{authorId}(authorId=${author.id})}">View</a>
+                                    <div th:if="${isAdmin}">
+                                        <a class="btn btn-secondary" th:href="@{/authors/{authorId}/edit(authorId=${author.id})}">Edit</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
