--- a/src/main/resources/templates/authors-create.html
+++ b/src/main/resources/templates/authors-create.html
@@ -17,6 +17,11 @@
                         <input type="text" class="form-control" id="name" name="name" th:field="*{name}" placeholder="Name">
                         <p th:if="${#fields.hasErrors('name')}" class="text-danger" th:errors="*{name}"></p>
                     </div>
+                    <div class="form-group col-md-6">
+                        <label for="name">Photo Url</label>
+                        <input type="text" class="form-control" id="photoUrl" name="photoUrl" th:field="*{photoUrl}" placeholder="Photo Url">
+                        <p th:if="${#fields.hasErrors('photoUrl')}" class="text-danger" th:errors="*{photoUrl}"></p>
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Create</button>
             </form>
