--- a/src/main/resources/templates/books-create.html
+++ b/src/main/resources/templates/books-create.html
@@ -22,6 +22,10 @@
                         <input type="number" class="form-control" id="price" name="price" th:field="*{price}" placeholder="Price">
                     </div>
                     <div class="form-group col-md-6">
+                        <label for="cover">Cover Url</label>
+                        <input type="text" class="form-control" id="cover" name="cover" th:field="*{photoUrl}" placeholder="Cover Url">
+                    </div>
+                    <div class="form-group col-md-6">
                         <label for="description">Description</label>
                         <input type="text" class="form-control" id="description" name="description" th:field="*{description}" placeholder="Description">
                         <p th:if="${#fields.hasErrors('description')}" class="text-danger" th:errors="*{description}"></p>
