--- a/src/main/resources/templates/books-detail.html
+++ b/src/main/resources/templates/books-detail.html
@@ -1,6 +1,7 @@
 <html xmlns:th="http://thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}"
+      xmlns:sec="http://www.thymeleaf.org"
 >
 <head>
     <title>Book Create</title>
@@ -12,7 +13,6 @@
             <div class="container">
                 <div class="text-center my-5">
                     <h1 class="fw-bolder" th:text="${book.title}"></h1>
-                    <p class="lead mb-0">Filler text</p>
                 </div>
             </div>
         </header>
@@ -23,79 +23,46 @@
                 <div class="col-lg-8">
                     <!-- Featured blog post-->
                     <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                        <a th:href="${book.photoUrl}"><img class="card-img-top" th:src="${book.photoUrl}" alt="Book Cover" /></a>
                         <div class="card-body">
-                            <div class="small text-muted" th:text="${book.isbn}">January 1, 2023</div>
-                            <h2 class="card-title">About</h2>
+                            <div class="small text-muted" th:text="${book.isbn}"></div>
+                            <h2 class="card-title">Description</h2>
                             <p class="card-text" th:text="${book.description}"></p>
-                            <div th:if="${user.id} == ${book.createdBy.id}">
-                                <a class="btn btn-primary" th:href="@{/books/{bookId}/delete(bookId=${book.id})}">Delete</a>
-                                <a class="btn btn-primary" th:href="@{/authors/{bookId}/new(bookId=${book.id})}">Create Author</a>
+                            <h2 class="card-title">Price</h2>
+                            <p class="card-text" th:text="${book.price}"></p>
+                            <h2 class="card-title">Publisher</h2>
+                            <p class="card-text" th:text="${book.publisher}"></p>
+                            <h2 class="card-title">Publication Date</h2>
+                            <p class="card-text" th:text="${book.publicationDate}"></p>
+                            <div class="d-flex gap-2" role="group">
+                                <a sec:authorize="isAuthenticated()" class="btn btn-primary" th:href="@{/books/buy/{bookId}(bookId=${book.id})}">BUY</a>
+                                <div th:if="${isAdmin}">
+                                    <a class="btn btn-primary" th:href="@{/books/{bookId}/delete(bookId=${book.id})}">Delete</a>
+                                    <a class="btn btn-primary" th:href="@{/authors/{bookId}/new(bookId=${book.id})}">Create Author</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <!-- Nested row for non-featured blog posts-->
                     <div class="row">
-                        <div class="col-lg-6">
-                            <!-- Blog post-->
+                        <!-- Blog entries-->
+                        <div class="col-lg-8">
+                            <!-- Featured blog post-->
                             <div th:each="author :${book.authors}" class="card mb-4">
-                                <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                                <a th:href="${author.photoUrl}"><img class="card-img-top" th:src="${author.photoUrl}" alt="Author Photo" /></a>
                                 <div class="card-body">
-                                    <div class="small text-muted">January 1, 2023</div>
-                                    <h2 th:text="${author.name}" class="card-title h4"></h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" th:href="@{/authors/{authorId}(authorId=${author.id})}">More →</a>
-                                </div>
-                            </div>
-                    </div>
-                    <!-- Pagination-->
-                    <nav aria-label="Pagination">
-                        <hr class="my-0" />
-                        <ul class="pagination justify-content-center my-4">
-                            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
-                            <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">3</a></li>
-                            <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">15</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">Older</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <!-- Side widgets-->
-                <div class="col-lg-4">
-                    <!-- Search widget-->
-                    <div class="card mb-4">
-                        <div class="card-header">Search</div>
-                        <div class="card-body">
-                            <div class="input-group">
-                                <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                                <button class="btn btn-primary" id="button-search" type="button">Go!</button>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Categories widget-->
-                    <div class="card mb-4">
-                        <div class="card-header">Categories</div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <ul class="list-unstyled mb-0">
-                                        <li><a href="#!">Web Design</a></li>
-                                        <li><a href="#!">HTML</a></li>
-                                        <li><a href="#!">Freebies</a></li>
-                                    </ul>
+                                    <div class="small text-muted" th:text="${author.name}"></div>
+                                    <div class="d-flex gap-2" role="group">
+                                        <a class="btn btn-primary" th:href="@{/authors/{authorId}(authorId=${author.id})}">VIEW</a>
+                                        <div th:if="${isAdmin}">
+                                            <a class="btn btn-primary" th:href="@{/authors/{authorId}/delete(authorId=${author.id})}">Delete</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- Side widget-->
-                    <div class="card mb-4">
-                        <div class="card-header">Side Widget</div>
-                        <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
-                    </div>
                 </div>
-            </div>
             </div>
         </div>
     </section>
