--- a/src/main/resources/templates/books-edit.html
+++ b/src/main/resources/templates/books-edit.html
@@ -23,6 +23,11 @@
                         <input type="number" class="form-control" id="price" name="price" th:field="*{price}" placeholder="Price">
                     </div>
                     <div class="form-group col-md-6">
+                        <label for="description">Cover Url</label>
+                        <input type="text" class="form-control" id="photoUrl" name="photoUrl" th:field="*{photoUrl}" placeholder="Cover Url">
+                        <p th:if="${#fields.hasErrors('photoUrl')}" class="text-danger" th:errors="*{photoUrl}"></p>
+                    </div>
+                    <div class="form-group col-md-6">
                         <label for="description">Description</label>
                         <input type="text" class="form-control" id="description" name="description" th:field="*{description}" placeholder="Description">
                         <p th:if="${#fields.hasErrors('description')}" class="text-danger" th:errors="*{description}"></p>
@@ -36,7 +41,7 @@
                         <input type="text" class="form-control" id="quantityAvailable" name="quantityAvailable" th:field="*{quantityAvailable}" placeholder="Quantity Available">
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="publicationDate">publicationDate</label>
+                        <label for="publicationDate">Publication Date</label>
                         <input type="datetime-local" class="form-control" id="publicationDate" name="publicationDate" th:field="*{publicationDate}" placeholder="Publication Date">
                     </div>
                 </div>
