--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,6 +14,7 @@
         @media screen and (max-width: 450px) {
             .login-form{
                 margin-top: 10%;
+                margin-bottom: 10%;
             }
             .register-form{
                 margin-top: 10%;
@@ -60,8 +61,9 @@
                                 placeholder="Password"
                                 name="password">
                     </div>
-                    <button th:href="@{/register}" type="submit" class="btn btn-black">Don't have an account? Register here.</button>
-                    <button type="submit" value="Log in" class="btn btn-secondary">Login</button>
+                    <div class="pt-2">
+                        <button type="submit" value="Log in" class="btn btn-secondary">Login</button>
+                    </div>
                 </form>
             </div>
         </div>
