--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -66,8 +66,9 @@
                                 th:field="*{password}">
                     </div>
                     <p th:if="${#fields.hasErrors('password')}" class="text-danger"></p>
-                    <button th:href="@{/login}" type="submit" class="btn btn-black">Login here.</button>
-                    <button th:href="@{/register}" type="submit" class="btn btn-secondary">Register</button>
+                    <div class="pt-2">
+                        <button type="submit" class="btn btn-secondary">Register</button>
+                    </div>
                 </form>
             </div>
         </div>
